// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search should render match to snapshot default 1`] = `
<div>
  <div
    class="relative"
  >
    <input
      class="border border-gray-300 focus:border-primary outline-none w-full h-10 pl-4 pr-9"
      placeholder="Search"
      value="value"
    />
  </div>
</div>
`;

exports[`Search should render match to snapshot with icon 1`] = `
<div>
  <div
    class="relative"
  >
    <input
      class="border border-gray-300 focus:border-primary outline-none w-full h-10 pl-4 pr-9"
      placeholder="Search"
      value="value"
    />
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-magnifying-glass absolute top-3 right-3 text-gray-500 cursor-pointer"
      data-icon="magnifying-glass"
      data-prefix="fas"
      focusable="false"
      role="img"
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M416 208c0 45.9-14.9 88.3-40 122.7L502.6 457.4c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L330.7 376c-34.4 25.2-76.8 40-122.7 40C93.1 416 0 322.9 0 208S93.1 0 208 0S416 93.1 416 208zM208 352a144 144 0 1 0 0-288 144 144 0 1 0 0 288z"
        fill="currentColor"
      />
    </svg>
  </div>
</div>
`;
